@@ -481,12 +481,10 @@ private:
 std::string
 default_command_editor::do_readline (const std::string& prompt, bool& eof)
 {
-  eof = false;
-
   fprintf (output_stream, prompt.c_str ());
   fflush (output_stream);
 
-  return octave_fgetl (input_stream);
+  return octave_fgetl (input_stream, eof);
 }
 
 void
